--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "devs@teravoz",
   "license": "MIT",
   "dependencies": {
+    "bunyan": "^1.8.12",
+    "express": "^4.17.1",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
