--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "devs@teravoz",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^16.1.5",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
     "node-fetch": "^2.6.0",
